--- a/Hora/hora.html
+++ b/Hora/hora.html
@@ -17,6 +17,6 @@
 <body>
     <div class="menu">
         <a href="/index.html" id="textoMenu"><b>Inicio</b></a>
-        <a href="/Info/info.html" id="textoMenu"><b>Qué es Comer en BA?</b></a>
+        <a href="/Info/info.html" id="textoMenu"><b>Newsletter</b></a>
     </div> 
 </html>
