--- a/Barrio/barrio.html
+++ b/Barrio/barrio.html
@@ -18,7 +18,7 @@
 <body>
     <div class="menu">
         <a href="/index.html" id="textoMenu"><b>Inicio</b></a>
-        <a href="/Info/info.html" id="textoMenu"><b>Qué es Comer en BA?</b></a>
+        <a href="/Info/info.html" id="textoMenu"><b>Newsletter</b></a>
     </div> 
     <div class="titulo"><b>¿ Buscás algo rico y cerca de casa ?</b></div>
     <div class="fotos">
