--- a/Comida/comida.html
+++ b/Comida/comida.html
@@ -17,15 +17,15 @@
 <body>
     <div class="menu">
         <a href="/index.html" id="textoMenu"><b>Inicio</b></a>
-        <a href="/Info/info.html" id="textoMenu"><b>Qué es Comer en BA?</b></a>
+        <a href="/Info/info.html" id="textoMenu"><b>Newsletter</b></a>
     </div> 
     <div class="Intro">
         <div id="titulo"><b>Rutas gastronómicas</b></div>
         <div id="texto">Estás con ganas de comer una buena hamburguesa? ¿Te levantaste con ganas de desayunar unas ricas medialunas o estás tentado de algo dulce? Estás en el lugar indicado!</div>
     </div>
 
-    <div class="d-flex justify-content-around align-content-center flex-wrap-direction-column">
-      <div class="card" style="width: 15.5rem; height: 34rem; margin: 30px;">
+    <div class="d-flex justify-content-around align-content-center">
+      <div class="card" style="width: 16rem; height: 34rem; margin: 30px;">
         <img src="./imagenes/Hamburguesa.JPG" class="card-img-top" style="width: auto; height: 320px;" alt="Hamburguesas">
         <div class="card-body">
           <h5 class="card-title">Ruta de la Hamburguesa</h5>
@@ -33,7 +33,7 @@
           <a href="https://goo.gl/maps/j5JxqQLmq8unJqdV9" class="btn btn-primary">Visitá el mapa</a>
         </div>
       </div>
-      <div class="card" style="width: 15.5rem; height: 34rem; margin: 30px;">
+      <div class="card" style="width: 16rem; height: 34rem; margin: 30px;">
         <img src="./imagenes/Medialunas.png" class="card-img-top" style="height: 320px;" alt="Medialunas">
         <div class="card-body">
           <h5 class="card-title">Ruta de la Medialuna</h5>
@@ -41,7 +41,7 @@
           <a href="https://goo.gl/maps/CDLhhUHXTHAvjadHA" class="btn btn-primary">Visitá el mapa</a>
         </div>
       </div>
-      <div class="card" style="width: 15.5rem;height: 34rem; margin: 30px;">
+      <div class="card" style="width: 16rem;height: 34rem; margin: 30px;">
         <img src="./imagenes/Alfajor.jpg" class="card-img-top" style="height: 320px;" alt="Alfajores">
         <div class="card-body">
           <h5 class="card-title">Ruta del Alfajor</h5>
@@ -49,7 +49,7 @@
           <a href="https://goo.gl/maps/4iggeEnnenG46Xe99" class="btn btn-primary">Visitá el mapa</a>
         </div>
       </div>
-      <div class="card" style="width: 15.5rem;height: 34rem; margin: 30px;">
+      <div class="card" style="width: 16rem;height: 34rem; margin: 30px;">
         <img src="./imagenes/Pizza.jpg" class="card-img-top" style="height: 320px;" alt="Pizza">
         <div class="card-body">
           <h5 class="card-title">Ruta de la Pizza</h5>
