--- a/Info/info.html
+++ b/Info/info.html
@@ -14,47 +14,33 @@
     <title>Comer en BA</title>
 </head>
 <body>
-    <div class="menu">
-        <a href="/index.html" id="textoMenu"><b>Inicio</b></a>
-        <a href="/Info/info.html" id="textoMenu"><b>Qué es Comer en BA?</b></a>
+  <div class="menu">
+      <a href="/index.html" id="textoMenu"><b>Inicio</b></a>
+  </div>
+  <div class="container">
+    <h1 class="text-center mt-5 text-light"><strong>Suscribite al Newsletter :)</strong></h1>
+    <p class="text-light text-center m-3">Completá tus datos acá abajo y vas a recibir un mail semanal con los mejores lugares para salir a comer en Buenos Aires!</p>
+    <div class="d-flex justify-content-around align-content-center m-4">
+      <div><img src="./imagenes/Ñoquis.jpg" style="height:400px;" alt="Ñoquis"></div>
+      <div><img src="./imagenes/CafeAnafe.jpg" style="height:400px;" alt="Café"></div>
+      <div><img src="./imagenes/Argot.jpg" style="height:400px;" alt="Panera"></div>
     </div>
-    <div id="carouselExampleCaptions" class="carousel slide">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="..." class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
-            </div>
+    <form action="https://formsubmit.co/sofiberardol@gmail.com" method="POST" class="m-5">
+      <input type="hidden" name="_captcha" value="false">
+      <div class="form-group align-content-center">
+        <div class="form-row">
+          <div class="col">
+            <input type="text" name="name" class="form-control mb-4" placeholder="Full Name" required>
           </div>
-          <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
-            </div>
+          <div class="col">
+            <input type="email" name="email" class="form-control mb-4" placeholder="Email Address" required>
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
       </div>
+      <div class="d-flex justify-content-center align-content-center">
+        <div><button type="submit" class="btn btn-lg btn-dark btn-block">Suscribirme</button></div>
+      </div>
+    </form>
+  </div>
 </body>
 </html>
