--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 </head>
 <body>
     <div class="menu">
-        <a href="./index.html" id="textoMenu"><b>Inicio</b></a>
-        <a href="./Info/info.html" id="textoMenu"><b>Qué es Comer en BA?</b></a>
+        <a href="./Info/info.html" id="textoMenu"><b>Newsletter</b></a>
     </div>
     <div class="container">
         <div id="paraTitulo">Comer en BA</div>
