--- a/Info/info.html
+++ b/Info/info.html
@@ -25,7 +25,7 @@
       <div><img src="./imagenes/CafeAnafe.jpg" style="height:400px;" alt="Café"></div>
       <div><img src="./imagenes/Argot.jpg" style="height:400px;" alt="Panera"></div>
     </div>
-    <form action="https://formsubmit.co/sofiberardol@gmail.com" method="POST" class="m-5">
+    <form action="https://formsubmit.co/sberardolopez@itba.edu.ar" method="POST" class="m-5">
       <input type="hidden" name="_captcha" value="false">
       <div class="form-group align-content-center">
         <div class="form-row">
