--- a/Barrio/barrio.html
+++ b/Barrio/barrio.html
@@ -20,7 +20,7 @@
         <a href="/index.html" id="textoMenu"><b>Inicio</b></a>
         <a href="/Info/info.html" id="textoMenu"><b>Newsletter</b></a>
     </div> 
-    <div class="titulo"><b>¿ Buscás algo rico y cerca de casa ?</b></div>
+    <div id="titulo"><b>¿Buscás algo rico y cerca de casa?</b></div>
     <div class="fotos">
         <div class="foto">
             <img id="img" src="imagenes/Palermo.jpg" alt="Palermo">
