--- a/Barrio/San Telmo/STelmo.html
+++ b/Barrio/San Telmo/STelmo.html
@@ -15,8 +15,8 @@
 </head>
 <body>
     <div class="menu">
-        <a href="./index.html" id="textoMenu"><b>Inicio</b></a>
-        <a href="./Info/info.html" id="textoMenu"><b>Qué es Comer en BA?</b></a>
+        <a href="/index.html" id="textoMenu"><b>Inicio</b></a>
+        <a href="/Info/info.html" id="textoMenu"><b>Newsletter</b></a>
     </div>
 </body>
 </html>
