--- a/Info/info.html
+++ b/Info/info.html
@@ -12,6 +12,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comer en BA</title>
+    <script src="/script.js"></script>
 </head>
 <body>
   <div class="menu">
@@ -20,26 +21,22 @@
   <div class="container">
     <h1 class="text-center mt-5 text-light"><strong>Suscribite al Newsletter :)</strong></h1>
     <p class="text-light text-center m-3">Completá tus datos acá abajo y vas a recibir un mail semanal con los mejores lugares para salir a comer en Buenos Aires!</p>
-    <div class="d-flex justify-content-around align-content-center m-4">
+    <div class="d-flex flex-wrap justify-content-around align-content-center m-4">
       <div><img src="./imagenes/Ñoquis.jpg" style="height:400px;" alt="Ñoquis"></div>
       <div><img src="./imagenes/CafeAnafe.jpg" style="height:400px;" alt="Café"></div>
       <div><img src="./imagenes/Argot.jpg" style="height:400px;" alt="Panera"></div>
     </div>
-    <form action="https://formsubmit.co/sberardolopez@itba.edu.ar" method="POST" class="m-5">
-      <input type="hidden" name="_captcha" value="false">
-      <div class="form-group align-content-center">
-        <div class="form-row">
-          <div class="col">
-            <input type="text" name="name" class="form-control mb-4" placeholder="Full Name" required>
-          </div>
-          <div class="col">
-            <input type="email" name="email" class="form-control mb-4" placeholder="Email Address" required>
-          </div>
+    <form class="mb-4 ms-5 me-5">
+      <div class="row g-3 mb-4">
+        <div class="col">
+          <input type="text" class="form-control" placeholder="Nombre" id="nombre">
         </div>
-      </div>
-      <div class="d-flex justify-content-center align-content-center">
-        <div><button type="submit" class="btn btn-lg btn-dark btn-block">Suscribirme</button></div>
-      </div>
+        <div class="col">
+          <input type="text" class="form-control" placeholder="Correo electrónico" id="correo">
+        </div>
+        <div class="d-flex align-items-center justify-content-center">
+          <button class="btn btn-md btn-dark btn-block" onclick="MostrarMensaje()">Suscribirme</button>
+        </div>
     </form>
   </div>
 </body>
