--- a/Barrio/barrio.html
+++ b/Barrio/barrio.html
@@ -48,7 +48,7 @@
         <div id="textoC">Buscalo acá y te tiramos recomendaciones!</div>
         <div class="m-12 d-flex align-items-center">
             <input type="text" class="m-2" id="inputComida" placeholder="Ingresa una comida">
-            <button class="btn btn-md btn-dark btn-block" onclick="sugerirLugarComida()">Buscar</button>
+            <button type="button" class="btn btn-secondary" onclick="sugerirLugarComida()">Buscar</button>
         </div>
         <div><p id="resultado" class="text-light"></p></div>
     </div>
