--- a/Info/info.html
+++ b/Info/info.html
@@ -26,18 +26,16 @@
       <div><img src="./imagenes/CafeAnafe.jpg" style="height:400px;" alt="Café"></div>
       <div><img src="./imagenes/Argot.jpg" style="height:400px;" alt="Panera"></div>
     </div>
-    <form class="mb-4 ms-5 me-5">
-      <div class="row g-3 mb-4">
-        <div class="col">
-          <input type="text" class="form-control" placeholder="Nombre" id="nombre">
-        </div>
-        <div class="col">
-          <input type="text" class="form-control" placeholder="Correo electrónico" id="correo">
-        </div>
-        <div class="d-flex align-items-center justify-content-center">
-          <button class="btn btn-md btn-dark btn-block" onclick="MostrarMensaje()">Suscribirme</button>
-        </div>
-    </form>
-  </div>
+    <div class="row ms-5 me-5 m-3">
+      <div class="col">
+        <input type="text" class="form-control" placeholder="Nombre" id="nombre">
+      </div>
+      <div class="col">
+        <input type="text" class="form-control" placeholder="Correo electrónico" id="correo">
+      </div>
+    </div>
+      <div class="d-flex align-items-center justify-content-center mb-3">
+        <button class="btn btn-secondary" type="button" onclick="suscribirse()">Suscribirme</button>
+      </div>
 </body>
 </html>
