--- a/Barrio/barrio.html
+++ b/Barrio/barrio.html
@@ -35,8 +35,8 @@
             <div class="arriba"><a id="formato" href="./San Telmo/STelmo.html"><p style="background-color: #B89663; padding: 10px;">SAN TELMO</p></a></div>
         </div>
         <div class="foto">
-            <img id="img" src="imagenes/Cañitas.jpg" alt="Cañitas">
-            <div class="arriba"><a id="formato" href="./Las Cañitas/cañitas.html"><p style="background-color:#6D3826; padding: 10px;">LAS CAÑITAS</p></a></div>
+            <img id="img" src="imagenes/Caballito.jpg" alt="Caballito">
+            <div class="arriba"><a id="formato" href="./Caballito/caballito.html"><p style="background-color:#6D3826; padding: 10px;">CABALLITO</p></a></div>
         </div>
         <div class="foto">
             <img id="img" src="imagenes/Nuñez-Belgrano.jpg" alt="Nuñez/Belgrano">
