--- a/Barrio/Palermo/palermo.html
+++ b/Barrio/Palermo/palermo.html
@@ -12,11 +12,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comer en BA</title>
+    <script src="/script.js"></script>
 </head>
 <body>
     <div class="menu">
         <a href="/index.html" id="textoMenu"><b>Inicio</b></a>
         <a href="/Info/info.html" id="textoMenu"><b>Newsletter</b></a>
+    </div>
+    <div class="Intro">
+        <div id="titulo"><b>Comer en Palermo</b></div>
+        <div id="texto"><p>Pasá el cursor sobre las fotos para saber dónde comer así de rico :)</p></div>
+    </div>
+    <div class="d-flex flex-wrap align-items-center justify-content-around">
+        <div class="fotos" onmouseover="mostrar()">
+            <img class="foto rounded" src="./Imagenes/Griega.jpg" alt="Comida Griega">
+            <div class="restaurante">
+                <p>Theos Souvlaky</p>
+                <p>Tipo de comida: Griega</p>
+                <p>¿Dónde? Gorriti 4400</p>
+                <a href="https://www.instagram.com/theos.souvlaki/">Visitá el instagram</a>
+            </div>
+        </div>
+        <div class="fotos" onmouseover="mostrar()">
+            <img class="foto rounded" src="./Imagenes/Pizza.jpg" alt="Pizza">
+            <div class="restaurante">
+                <p>La Sorellina</p>
+                <p>Tipo de comida: Pizza</p>
+                <p>¿Dónde? Ramón Freire 1393</p>
+                <a href="https://www.instagram.com/tiamopizzabar/">Visitá el instagram</a>
+            </div>
+        </div>
+        <div class="fotos" onmouseover="mostrar()">
+            <img class="foto rounded" src="./Imagenes/Tapas.jpg" alt="Cantina">
+            <div class="restaurante">
+                <p>Cantina Maula</p>
+                <p>Tipo de comida: Platitos/Tapas</p>
+                <p>¿Dónde? Mansilla 3505</p>
+                <a href="https://www.instagram.com/maula.cantina/">Visitá el instagram</a>
+            </div>
+        </div>
+        <div class="fotos" onmouseover="mostrar()">
+            <img class="foto rounded" src="./Imagenes/Veggie.jpg" alt="Comida vegetariana">
+            <div class="restaurante">
+                <p>Artemisia</p>
+                <p>Tipo de comida: Vegetariana</p>
+                <p>¿Dónde? Costa Rica 5893</p>
+                <a href="https://www.instagram.com/artemisiacocinanatural/">Visitá el instagram</a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
