--- a/Barrio/Palermo/palermo.html
+++ b/Barrio/Palermo/palermo.html
@@ -24,7 +24,7 @@
         <div id="texto"><p>Pasá el cursor sobre las fotos para saber dónde comer así de rico :)</p></div>
     </div>
     <div class="d-flex flex-wrap align-items-center justify-content-around">
-        <div class="fotos" onmouseover="mostrar()">
+        <div class="fotos">
             <img class="foto rounded" src="./Imagenes/Griega.jpg" alt="Comida Griega">
             <div class="restaurante">
                 <p>Theos Souvlaky</p>
@@ -33,7 +33,7 @@
                 <a href="https://www.instagram.com/theos.souvlaki/">Visitá el instagram</a>
             </div>
         </div>
-        <div class="fotos" onmouseover="mostrar()">
+        <div class="fotos">
             <img class="foto rounded" src="./Imagenes/Pizza.jpg" alt="Pizza">
             <div class="restaurante">
                 <p>La Sorellina</p>
@@ -42,7 +42,7 @@
                 <a href="https://www.instagram.com/tiamopizzabar/">Visitá el instagram</a>
             </div>
         </div>
-        <div class="fotos" onmouseover="mostrar()">
+        <div class="fotos">
             <img class="foto rounded" src="./Imagenes/Tapas.jpg" alt="Cantina">
             <div class="restaurante">
                 <p>Cantina Maula</p>
@@ -51,7 +51,7 @@
                 <a href="https://www.instagram.com/maula.cantina/">Visitá el instagram</a>
             </div>
         </div>
-        <div class="fotos" onmouseover="mostrar()">
+        <div class="fotos">
             <img class="foto rounded" src="./Imagenes/Veggie.jpg" alt="Comida vegetariana">
             <div class="restaurante">
                 <p>Artemisia</p>
