--- a/Barrio/San Telmo/STelmo.html
+++ b/Barrio/San Telmo/STelmo.html
@@ -18,5 +18,47 @@
         <a href="/index.html" id="textoMenu"><b>Inicio</b></a>
         <a href="/Info/info.html" id="textoMenu"><b>Newsletter</b></a>
     </div>
+    <div class="Intro">
+        <div id="titulo"><b>Comer en San Telmo</b></div>
+        <div id="texto"><p>Pasá el cursor sobre las fotos para saber dónde comer así de rico :)</p></div>
+    </div>
+    <div class="d-flex flex-wrap align-items-center justify-content-around">
+        <div class="fotos">
+            <img class="foto rounded" src="./Imagenes/Parrilla.jpg" alt="Parrilla">
+            <div class="restaurante">
+                <p>Hierro</p>
+                <p>Tipo de comida: Parrilla</p>
+                <p>¿Dónde? Mercado de San Telmo</p>
+                <a href="https://www.instagram.com/hierrosantelmo/">Visitá el instagram</a>
+            </div>
+        </div>
+        <div class="fotos">
+            <img class="foto rounded" src="./Imagenes/Raclette.jpg" alt="Queso">
+            <div class="restaurante">
+                <p>Je Suis Raclette</p>
+                <p>Tipo de comida: Todo con queso</p>
+                <p>¿Dónde? Mercado de San Telmo</p>
+                <a href="https://www.instagram.com/jesuisraclette/">Visitá el instagram</a>
+            </div>
+        </div>
+        <div class="fotos">
+            <img class="foto rounded" src="./Imagenes/CafeSanJuan.jpg" alt="Cafe San Juan">
+            <div class="restaurante">
+                <p>Cafe San Juan</p>
+                <p>Tipo de comida: Bodegón</p>
+                <p>¿Dónde? Chile 474</p>
+                <a href="https://www.instagram.com/cafesanjuanoficial/">Visitá el instagram</a>
+            </div>
+        </div>
+        <div class="fotos">
+            <img class="foto rounded" src="./Imagenes/Saigon.jpg" alt="Comida asiática">
+            <div class="restaurante">
+                <p>Saigón</p>
+                <p>Tipo de comida: Asiática</p>
+                <p>¿Dónde? Bolívar 986</p>
+                <a href="https://www.instagram.com/saigonnoodlebar/">Visitá el instagram</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
