--- a/Barrio/Caballito/caballito.html
+++ b/Barrio/Caballito/caballito.html
@@ -19,44 +19,44 @@
         <a href="/Info/info.html" id="textoMenu"><b>Newsletter</b></a>
     </div>
     <div class="Intro">
-        <div id="titulo"><b>Comer en Palermo</b></div>
+        <div id="titulo"><b>Comer en Caballito</b></div>
         <div id="texto"><p>Pasá el cursor sobre las fotos para saber dónde comer así de rico :)</p></div>
     </div>
     <div class="d-flex flex-wrap align-items-center justify-content-around">
         <div class="fotos">
-            <img class="foto rounded" src="./Imagenes/Griega.jpg" alt="Comida Griega">
+            <img class="foto rounded" src="./Imagenes/Napule.jpg" alt="Napule">
             <div class="restaurante">
-                <p>Theos Souvlaky</p>
-                <p>Tipo de comida: Griega</p>
-                <p>¿Dónde? Gorriti 4400</p>
-                <a href="https://www.instagram.com/theos.souvlaki/">Visitá el instagram</a>
+                <p>Napule</p>
+                <p>Tipo de comida: Italiana</p>
+                <p>¿Dónde? José A. Terry 300</p>
+                <a href="https://www.instagram.com/napulegastronomia/">Visitá el instagram</a>
             </div>
         </div>
         <div class="fotos">
-            <img class="foto rounded" src="./Imagenes/Pizza.jpg" alt="Pizza">
+            <img class="foto rounded" src="./Imagenes/Arena.jpg" alt="Arena">
             <div class="restaurante">
-                <p>La Sorellina</p>
-                <p>Tipo de comida: Pizza</p>
-                <p>¿Dónde? Ramón Freire 1393</p>
-                <a href="https://www.instagram.com/tiamopizzabar/">Visitá el instagram</a>
+                <p>Arena</p>
+                <p>Tipo de comida: De todo</p>
+                <p>¿Dónde? Emilio Mitre 377</p>
+                <a href="https://www.instagram.com/arena.buenosaires/">Visitá el instagram</a>
             </div>
         </div>
         <div class="fotos">
-            <img class="foto rounded" src="./Imagenes/Tapas.jpg" alt="Cantina">
+            <img class="foto rounded" src="./Imagenes/Fiera.jpg" alt="Fiera">
             <div class="restaurante">
-                <p>Cantina Maula</p>
-                <p>Tipo de comida: Platitos/Tapas</p>
-                <p>¿Dónde? Mansilla 3505</p>
-                <a href="https://www.instagram.com/maula.cantina/">Visitá el instagram</a>
+                <p>Fiera</p>
+                <p>Tipo de comida: Parrilla</p>
+                <p>¿Dónde? Pedro Goyena 296</p>
+                <a href="https://www.instagram.com/fieraparrilla/">Visitá el instagram</a>
             </div>
         </div>
         <div class="fotos">
-            <img class="foto rounded" src="./Imagenes/Veggie.jpg" alt="Comida vegetariana">
+            <img class="foto rounded" src="./Imagenes/Barragán.jpg" alt="Barragán">
             <div class="restaurante">
-                <p>Artemisia</p>
-                <p>Tipo de comida: Vegetariana</p>
-                <p>¿Dónde? Costa Rica 5893</p>
-                <a href="https://www.instagram.com/artemisiacocinanatural/">Visitá el instagram</a>
+                <p>Barragán</p>
+                <p>Tipo de comida: Mexicana/Brunch</p>
+                <p>¿Dónde? Nicasio Oroño 1195</p>
+                <a href="https://www.instagram.com/barragan.cafe/">Visitá el instagram</a>
             </div>
         </div>
     </div>
