--- a/Barrio/Colegiales/colegiales.html
+++ b/Barrio/Colegiales/colegiales.html
@@ -19,44 +19,44 @@
         <a href="/Info/info.html" id="textoMenu"><b>Newsletter</b></a>
     </div>
     <div class="Intro">
-        <div id="titulo"><b>Comer en Palermo</b></div>
+        <div id="titulo"><b>Comer en Colegiales</b></div>
         <div id="texto"><p>Pasá el cursor sobre las fotos para saber dónde comer así de rico :)</p></div>
     </div>
     <div class="d-flex flex-wrap align-items-center justify-content-around">
         <div class="fotos">
-            <img class="foto rounded" src="./Imagenes/Griega.jpg" alt="Comida Griega">
+            <img class="foto rounded" src="./Imagenes/Arredondo.jpg" alt="Arredondo">
             <div class="restaurante">
-                <p>Theos Souvlaky</p>
-                <p>Tipo de comida: Griega</p>
-                <p>¿Dónde? Gorriti 4400</p>
-                <a href="https://www.instagram.com/theos.souvlaki/">Visitá el instagram</a>
+                <p>Arredondo</p>
+                <p>Tipo de comida: Hamburguesas/Picoteo</p>
+                <p>¿Dónde? Arredondo 2562</p>
+                <a href="https://www.instagram.com/arredondo.ba/">Visitá el instagram</a>
             </div>
         </div>
         <div class="fotos">
-            <img class="foto rounded" src="./Imagenes/Pizza.jpg" alt="Pizza">
+            <img class="foto rounded" src="./Imagenes/Loreto.jpg" alt="Loreto">
             <div class="restaurante">
-                <p>La Sorellina</p>
-                <p>Tipo de comida: Pizza</p>
-                <p>¿Dónde? Ramón Freire 1393</p>
-                <a href="https://www.instagram.com/tiamopizzabar/">Visitá el instagram</a>
+                <p>Loreto</p>
+                <p>Tipo de comida: De todo</p>
+                <p>¿Dónde? Virrey Loreto 2912</p>
+                <a href="https://www.instagram.com/loretogardenbar/">Visitá el instagram</a>
             </div>
         </div>
         <div class="fotos">
-            <img class="foto rounded" src="./Imagenes/Tapas.jpg" alt="Cantina">
+            <img class="foto rounded" src="./Imagenes/Sifón.jpg" alt="Sifón Sodería">
             <div class="restaurante">
-                <p>Cantina Maula</p>
+                <p>Sifón</p>
                 <p>Tipo de comida: Platitos/Tapas</p>
-                <p>¿Dónde? Mansilla 3505</p>
-                <a href="https://www.instagram.com/maula.cantina/">Visitá el instagram</a>
+                <p>¿Dónde? Newbery 3881</p>
+                <a href="https://www.instagram.com/sifon.soderia/">Visitá el instagram</a>
             </div>
         </div>
         <div class="fotos">
-            <img class="foto rounded" src="./Imagenes/Veggie.jpg" alt="Comida vegetariana">
+            <img class="foto rounded" src="./Imagenes/Alegra.jpg" alt="Alegra">
             <div class="restaurante">
-                <p>Artemisia</p>
-                <p>Tipo de comida: Vegetariana</p>
-                <p>¿Dónde? Costa Rica 5893</p>
-                <a href="https://www.instagram.com/artemisiacocinanatural/">Visitá el instagram</a>
+                <p>Alegra</p>
+                <p>Tipo de comida: De todo + vino</p>
+                <p>¿Dónde? Olleros 3891</p>
+                <a href="https://www.instagram.com/alegra_rv/">Visitá el instagram</a>
             </div>
         </div>
     </div>
