--- a/Barrio/Nuñez-Belgrano/nuñez-bel.html
+++ b/Barrio/Nuñez-Belgrano/nuñez-bel.html
@@ -19,44 +19,44 @@
         <a href="/Info/info.html" id="textoMenu"><b>Newsletter</b></a>
     </div>
     <div class="Intro">
-        <div id="titulo"><b>Comer en Palermo</b></div>
+        <div id="titulo"><b>Comer en Nuñez y Belgrano</b></div>
         <div id="texto"><p>Pasá el cursor sobre las fotos para saber dónde comer así de rico :)</p></div>
     </div>
     <div class="d-flex flex-wrap align-items-center justify-content-around">
         <div class="fotos">
-            <img class="foto rounded" src="./Imagenes/Griega.jpg" alt="Comida Griega">
+            <img class="foto rounded" src="./Imagenes/Togni.jpg" alt="Togni's">
             <div class="restaurante">
-                <p>Theos Souvlaky</p>
-                <p>Tipo de comida: Griega</p>
-                <p>¿Dónde? Gorriti 4400</p>
-                <a href="https://www.instagram.com/theos.souvlaki/">Visitá el instagram</a>
-            </div>
-        </div>
-        <div class="fotos">
-            <img class="foto rounded" src="./Imagenes/Pizza.jpg" alt="Pizza">
-            <div class="restaurante">
-                <p>La Sorellina</p>
+                <p>Togni's</p>
                 <p>Tipo de comida: Pizza</p>
-                <p>¿Dónde? Ramón Freire 1393</p>
-                <a href="https://www.instagram.com/tiamopizzabar/">Visitá el instagram</a>
+                <p>¿Dónde? Blanco Encalada 1665</p>
+                <a href="https://www.instagram.com/tognispizza/">Visitá el instagram</a>
             </div>
         </div>
         <div class="fotos">
-            <img class="foto rounded" src="./Imagenes/Tapas.jpg" alt="Cantina">
+            <img class="foto rounded" src="./Imagenes/Orei.HEIC" alt="Orei">
             <div class="restaurante">
-                <p>Cantina Maula</p>
-                <p>Tipo de comida: Platitos/Tapas</p>
-                <p>¿Dónde? Mansilla 3505</p>
-                <a href="https://www.instagram.com/maula.cantina/">Visitá el instagram</a>
+                <p>Orei</p>
+                <p>Tipo de comida: Asiática</p>
+                <p>¿Dónde? Echeverría 1677</p>
+                <a href="https://www.instagram.com/orei.jp/">Visitá el instagram</a>
             </div>
         </div>
         <div class="fotos">
-            <img class="foto rounded" src="./Imagenes/Veggie.jpg" alt="Comida vegetariana">
+            <img class="foto rounded" src="./Imagenes/Soma.jpg" alt="Soma">
             <div class="restaurante">
-                <p>Artemisia</p>
-                <p>Tipo de comida: Vegetariana</p>
-                <p>¿Dónde? Costa Rica 5893</p>
-                <a href="https://www.instagram.com/artemisiacocinanatural/">Visitá el instagram</a>
+                <p>Soma</p>
+                <p>Tipo de comida: Pastas</p>
+                <p>¿Dónde? O'higgins 3448</p>
+                <a href="https://www.instagram.com/estoessoma.pasta/">Visitá el instagram</a>
+            </div>
+        </div>
+        <div class="fotos">
+            <img class="foto rounded" src="./Imagenes/Guey.jpg" alt="Guey Taquería">
+            <div class="restaurante">
+                <p>Guey</p>
+                <p>Tipo de comida: Mexicana</p>
+                <p>¿Dónde? Av. Congreso 2000</p>
+                <a href="https://www.instagram.com/gueytaqueria/">Visitá el instagram</a>
             </div>
         </div>
     </div>
