--- a/Barrio/Palermo/palermo.html
+++ b/Barrio/Palermo/palermo.html
@@ -25,7 +25,7 @@
     </div>
     <div class="d-flex flex-wrap align-items-center justify-content-around">
         <div class="fotos">
-            <img class="foto rounded" src="./Imagenes/Griega.jpg" alt="Comida Griega">
+            <img class="foto rounded" src="./Imagenes/Griega.jpg" alt="Theos Souvlaky">
             <div class="restaurante">
                 <p>Theos Souvlaky</p>
                 <p>Tipo de comida: Griega</p>
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="fotos">
-            <img class="foto rounded" src="./Imagenes/Pizza.jpg" alt="Pizza">
+            <img class="foto rounded" src="./Imagenes/Pizza.jpg" alt="Sorellina">
             <div class="restaurante">
                 <p>La Sorellina</p>
                 <p>Tipo de comida: Pizza</p>
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div class="fotos">
-            <img class="foto rounded" src="./Imagenes/Tapas.jpg" alt="Cantina">
+            <img class="foto rounded" src="./Imagenes/Tapas.jpg" alt="Maula Cantina">
             <div class="restaurante">
                 <p>Cantina Maula</p>
                 <p>Tipo de comida: Platitos/Tapas</p>
@@ -52,7 +52,7 @@
             </div>
         </div>
         <div class="fotos">
-            <img class="foto rounded" src="./Imagenes/Veggie.jpg" alt="Comida vegetariana">
+            <img class="foto rounded" src="./Imagenes/Veggie.jpg" alt="Artemisia">
             <div class="restaurante">
                 <p>Artemisia</p>
                 <p>Tipo de comida: Vegetariana</p>
